--- a/webstrom项目/多页展示/css/index.less
+++ b/webstrom项目/多页展示/css/index.less
@@ -132,7 +132,7 @@ body {
 
         .contentInner {
           width: 1100px;
-          height: 520px;
+          height: 100%;
           position: absolute;
           overflow: hidden;
           left: 0;
